docs: swagger: extend GET scan endpoint info
